--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ErenKaynak
+          github_user_name: ArdaBolukbasi
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
